[package]
name = "keeper_of_the_pg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
tokio = {version = "1.34.0" , features = ["rt-multi-thread" , "full"]}
tokio-util = "0.7.10"
axum = "0.7.5"
axum-macros = "0.4.0"
hyper = "1.1.0"
public-ip = "0.2.2"
sqlx = { version = "0.6.3", features = ["offline" , "runtime-tokio-rustls" , "sqlite" , "macros"] }
mc-query = "1.0.1"
log = "0.4.20"
env_logger = "0.10.0"
rand = "0.8.5"
tower = "0.4.13"
tower-http = {version = "0.4.4" , features = ["fs"]}
serde = "1.0.194"
ron = "0.8.1"
curl = "0.4.46"

[dependencies.serenity]
default-features = false
features = ["builder" , "cache" , "gateway" , "http" , "model" , "rustls_backend" , "utils" , "client" , "collector"]
version = "0.12.0"

[profile.dev.package.sqlx-macros]
opt-level = 3